[package]
name = "oracle-persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
anyhow = "1"
apache-avro = "0"
bs58 = "0"
bytes = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
file-store = { git = "https://github.com/helium/oracles.git", branch = "main", default-features = false }
futures = "0"
h3o = "0"
helium-crypto = {version = "0.8.1", features=["sqlx-postgres", "multisig"]}
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
hex = "0"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version="1", features = ["raw_value"] }
sqlx = {version = "0", features = [
  "postgres",
  "uuid",
  "decimal",
  "chrono",
  "macros",
  "runtime-tokio-rustls",
]}
tokio = { version = "1", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "rt-multi-thread",
  "rt",
  "process",
  "time"
] }
uuid = {version = "1", features = ["v4", "serde"]}
